<resources>
    <string name="app_name">My Music</string>
    <string name="tracks">Tracks</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="payment">Payment</string>
    <string name="playing">Now Playing</string>
    <string name="song_name">Song Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="album_name">Album Name</string>
    <string name="music_library">Music Library</string>
    <string name="artist_screen">Artist Screen</string>
    <string name="album_screen">Album Screen</string>
    <string name="song_detail">Song Details</string>
    <string name="payment_screen">Payment Screen</string>
    <string name="playlist_screen">Playlist Screen</string>
</resources>
