<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context="com.example.android.mymusic.PlayingActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/music"
        android:alpha="0.7"
        android:layout_gravity="center"
        android:layout_weight="1" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="20"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingLeft="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_name"
            android:textSize="19sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artist_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/album_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_shuffle"
            android:id="@+id/imageView3"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/ic_skip_previous"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/playView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/img"
            android:layout_weight="0"/>

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/ic_skip_next"
            android:id="@+id/imageView5"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_repeat"
            android:layout_gravity="center"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>
